# pulse

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  pulse.sublime-project  pulse.sublime-workspace
.cache/clangd/index/: build.cpp.5CF88889A82996FE.idx  capsule.h.0A4EF5B1EE7270F2.idx  collector.h.E8D4ACC17C5817F6.idx  component.h.5A78E9D4088699C0.idx  entity.h.9DCCF408D24D3981.idx  generator.h.2DDC64EB055FF3EC.idx  macro.h.D4223BBEF75D4844.idx  main.cpp.16D6D47BA97E15FE.idx  module_entity.h.7A61952D274291B1.idx  move.h.6C1AB5AE24F4F8B9.idx  name.h.5DCF09B6040524B8.idx  position.h.C6AEF96DCD08C8B2.idx  print_name.h.EF7D8FF4E0532126.idx  storage.h.9BCEBAC1C50F6D39.idx  storage.h.B9EC929CA730A269.idx  system.h.4162B83816C6C19C.idx  utility.h.1240E183973A59A6.idx  utility.h.3224BC99EEDDC264.idx
cmake/: pulse_project.cmake  pulse_toolchain.cmake  pulse_utility.cmake
docs/: build_system.md
projects/app/: CMakeLists.txt  benchmark.h  main.cpp
projects/app/ecs/module/: components.h  scene.h  storage.h  systems.h
projects/app/ecs/module/component/: name.h
projects/app/ecs/module/system/: initialize.h  readertest.h
projects/app/ecs_test/humanoid/: storage.h
projects/app/ecs_test/humanoid/component/: capsule.h  position.h
projects/app/ecs_test/humanoid/system/: move.h
projects/app/modules/: components.h  entity.h  modifier.h  systems.h  world.h
projects/app/modules/components/: name.h
projects/app/modules/systems/: printname.h
projects/ecs/: CMakeLists.txt  build.cpp
projects/ecs/access/: reader.h  writer.h
projects/ecs/component/: componentindexer.h
projects/ecs/concepts/: archetypechunkconcept.h  archetypemodifierconcept.h  archetypestoreconcept.h  componentconcept.h  dataaccessconcept.h  dataconcept.h  entityconcept.h  entitystoreconcept.h  hasdependencyconcept.h  helpers.h  outputconcept.h  outputhandleconcept.h  systemchunkconcept.h  systemconcept.h  systemhandleconcept.h  systemstoreconcept.h
projects/ecs/core/: access.h  componentstorage.h  systemexecution.h  systemexecutorsequential.h  systemstorage.h  utility.h
projects/ecs/detail/: componentmeta.h  componentmetaregistry.h  componentwrapper.h  systemfunctioninvoker.h  systemfunctionmeta.h  systemfunctionmetaregistry.h  systemfunctionquery.h  systemfunctionwrapper.h  utility.h
projects/ecs/entity/: entity.h  entityconcept.h  entityinfo.h  entitystorage.h
projects/ecs/scene/: scene.h
projects/ecs/system/: systemexecution.h  systemexecutioninfo.h  systemexecutorsequential.h  systemstorage.h
projects/ecs/types/: archetypechunk.h  archetypemodifier.h  archetypestore.h  dataaccess.h  entity.h  entitystore.h  outputhandle.h  systemchunk.h  systemhandle.h  systemstore.h  world.h
projects/ecs/utils/: collectors.h  generators.h  invokers.h  meta.h
projects/ecs/v3/component/: componentpool.h  componentstore.h
projects/ecs/v3/concepts/: componentconcept.h  componentpoolconcept.h  entitycapacityconcept.h  entityconcept.h
projects/ecs/v3/entity/: entity.h  entitycapacity.h
projects/ecs/v3/system/: system.h  systempool.h
projects/ecs/v3/utility/: meta.h
projects/ecs/v3/utils/: concepts.h  detail.h  types.h
projects/ecs/v3/world/: world.h
projects/foundation/: CMakeLists.txt  build.cpp  limits.h  meta.h  types.h
projects/foundation/bits/: bitmask.h
scripts/: build.sh  generate.sh
